--- a/final-capstone/capstone/vue/public/index.html
+++ b/final-capstone/capstone/vue/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/City-Tours-Icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/City-Tours-Icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/src//assets/City-Tours-Icons/favicon-16x16.png">
-    <link rel="manifest" href="/src/assets/City-Tours-Icons/site.webmanifest">
-    <title>final-vue-capstone-seed</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <title>City Tours</title>
   </head>
   <body>
     <noscript>
@@ -19,5 +19,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBawfx8Z8v5BBpahbC1Q8UVzOOdZpA3p54'></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBawfx8Z8v5BBpahbC1Q8UVzOOdZpA3p54"></script>
   </body>
 </html>
